# FreeSDM

./: README.md
Desktop/: Cargo.toml  Rocket.toml
Desktop/src/: commands.rs  connection.rs  main.rs  utils.rs
Flutter/: README.md  pubspec.yaml
Flutter/android/app/: build.gradle
Flutter/android/app/src/main/: AndroidManifest.xml
Flutter/android/app/src/profile/: AndroidManifest.xml
Flutter/ios/Runner/: Info.plist
Flutter/ios/Runner.xcodeproj/: project.pbxproj
Flutter/lib/: commandPage.dart  command_page.dart  commands.dart  connection.dart  freesdm_icons.dart  main.dart  mouse_controller.dart  settings.dart  settings_page.dart
Flutter/linux/: CMakeLists.txt  my_application.cc
Flutter/macos/Runner.xcodeproj/: project.pbxproj
Flutter/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
Flutter/macos/Runner/Configs/: AppInfo.xcconfig
Flutter/test/: widget_test.dart
Flutter/web/: index.html  manifest.json
Flutter/windows/: CMakeLists.txt
Flutter/windows/runner/: Runner.rc  main.cpp
Mobile/: settings.gradle
Mobile/app/: build.gradle
Mobile/app/src/androidTest/java/de/sillycode/sdmfree/: ExampleInstrumentedTest.java
Mobile/app/src/main/: AndroidManifest.xml
Mobile/app/src/main/java/de/sillycode/sdmfree/: Dashboard.java  MainActivity.java  Requests.java
Mobile/app/src/main/res/drawable/: play_pause_48px.xml
Mobile/app/src/main/res/drawable-v24/: ic_launcher_foreground.xml
Mobile/app/src/main/res/layout/: activity_dashboard.xml  activity_main.xml
Mobile/app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
Mobile/app/src/main/res/values/: colors.xml  ic_launcher_background.xml  strings.xml  themes.xml
Mobile/app/src/main/res/values-night/: themes.xml
Mobile/gradle/wrapper/: gradle-wrapper.properties
Server/: Cargo.toml  Insonium.json
Server/src/: commands.rs  hotkey.rs  hotkeys.rs  keys.rs  main.rs  mouse.rs  utils.rs
(+3 files in other folders)
