[package]
name = "free_sdm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
local-ip = "0.1.0"
local-ip-address = "0.5.3"
machine-ip = "0.2.1"
rand = "0.8.5"
rocket = "=0.5.0-rc.3"
simulate = "0.3.0"
