[package]
name = "free_sdm"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
actix-web-httpauth = "0.8.1"
colored = "2.0.4"
console = "0.15.7"
local-ip-address = "0.5.3"
rand = "0.8.5"
simulate = "0.3.0"
text_io = "0.1.12"
winconsole = "0.11.1"
log = "0.4.19"
portpicker = "0.1.1"
