[package]
name = "free_sdm_server"
version = "0.2.0"
edition = "2021"


[[bin]]
name = "FreeSDMServer"
path = "src/main.rs"

[dependencies]
actix-web = "4.4.1"
colored = "2.1.0"
console = "0.15.8"
local-ip-address = "0.5.6"
rand = "0.8.5"
text_io = "0.1.12"
winconsole = "0.11.1"
log = "0.4.20"
portpicker = "0.1.1"
enigo = "0.1.3"
